# uiautomator2-cli

./: README.md  README_ZH.md  pyproject.toml
docs/: harmony-real-device-checklist.en.md  harmony-real-device-checklist.md
src/u2cli/: app.py  cli.py  daemon.py  device.py  element.py  screen.py  smoke.py
src/u2cli/backends/: __init__.py  android_u2.py  base.py  factory.py  harmony_hm.py
src/u2cli/services/: __init__.py  hierarchy.py  xpath.py
src/u2cli/transports/: __init__.py  hdc.py
tests/: test_android_backend.py  test_command_migrations.py  test_daemon.py  test_device.py  test_harmony_backend.py  test_hdc_transport.py  test_smoke.py
