[project]
name = "uiautomator2-cli"
version = "0.2.1"
requires-python = ">=3.8"
dependencies = [
    "adbutils>=2.9.4",
    "click>=8.0",
    "uiautomator2>=3.5.0",
]

[[project.authors]]
name = "lanbaoshen"
email = "lanbaoshen@icloud.com"

[project.scripts]
u2cli = "u2cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/u2cli"]
