[project]
name = "uiautomator2-cli"
version = "0.2.1"
requires-python = ">=3.8"
dependencies = [
    "adbutils>=2.9.4",
    "click>=8.0",
    "uiautomator2>=3.5.0",
]

[project.optional-dependencies]
harmony = [
    "hmdriver2",
]

[[project.authors]]
name = "lanbaoshen"
email = "lanbaoshen@icloud.com"

[[project.authors]]
name = "martinzhang"
email = "2444056476@qq.com"

[project.scripts]
u2cli = "u2cli.cli:main"
u2cli-smoke = "u2cli.smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/u2cli"]
